--- a/WindowsFormsApplication1/Properties/Resources.resx
+++ b/WindowsFormsApplication1/Properties/Resources.resx
@@ -112,16 +112,34 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Advertencia" xml:space="preserve">
+    <value>Advertencia</value>
+  </data>
+  <data name="ErrorAgregarFuncionalidad" xml:space="preserve">
+    <value>La FUNCIONALIDAD que se quiere agregar, ya existe</value>
+  </data>
   <data name="ErrorBD" xml:space="preserve">
     <value>No se pudo conectar a la BD</value>
   </data>
+  <data name="ErrorDescripcionVacia" xml:space="preserve">
+    <value>El campo DESCRIPCIÓN no puede estar vacío</value>
+  </data>
+  <data name="ErrorEstadoVacio" xml:space="preserve">
+    <value>El campo ESTADO no puede estar vacío</value>
+  </data>
+  <data name="ErrorGuardado" xml:space="preserve">
+    <value>Error al Guardar</value>
+  </data>
   <data name="ErrorLogin" xml:space="preserve">
     <value>Usuario o contraseña invalidos</value>
+  </data>
+  <data name="ErrorRolSinFuncionalidad" xml:space="preserve">
+    <value>El ROL debe tener almenos una FUNCIONALIDAD</value>
   </data>
   <data name="ErrorSP" xml:space="preserve">
     <value>Error al ejecutar SP</value>
