Fecha desde el config

--- a/WindowsFormsApplication1/Properties/Resources.resx
+++ b/WindowsFormsApplication1/Properties/Resources.resx
@@ -460,4 +460,7 @@
   <data name="Monto" xml:space="preserve">
     <value>Monto</value>
   </data>
+  <data name="ErrorEnFechaSistema" xml:space="preserve">
+    <value>Error al obtener la fecha del archivo de configuración</value>
+  </data>
 </root>
