--- a/WindowsFormsApplication1/Properties/Resources.resx
+++ b/WindowsFormsApplication1/Properties/Resources.resx
@@ -538,4 +538,13 @@
   <data name="ErrorNoExisteCodPublicacion" xml:space="preserve">
     <value>No se ha podido encontrar un borrador para el código de publicación ingresado o el mismo no le pertenece.</value>
   </data>
+  <data name="PrecioInvalido" xml:space="preserve">
+    <value>El Precio debe ser mayor a 0</value>
+  </data>
+  <data name="PrecioReservaInvalido" xml:space="preserve">
+    <value />
+  </data>
+  <data name="StockInvalido" xml:space="preserve">
+    <value>El Stock debe ser mayor a 0</value>
+  </data>
 </root>
